# SearchEngine_asio_new

./: .gitignore  CMakeLists.txt  InvertedIndex__.h  InvertedIndex___.cpp  copy_with_version.ps1  main.cpp  test_main.cpp
docs/: CONSOLE_OUTPUT_AUDIT.md  LOG_ASSESSMENT.md
index_atomic_lock_free/: DocPaths.cpp  DocPaths.h  InvertedIndex.cpp  InvertedIndex.h  OEMFastTokenizer.h  OEMtoUpper.cpp  OEMtoUpper.h  WordID.cpp  simd_tokenizer.cpp
src/: AsioServer.cpp  AsioServer.h  ContextRuntime.cpp  ContextRuntime.h  ConverterJSON.cpp  ConverterJSON.h  DelayedEvent.cpp  DelayedEvent.h  DocPaths.cpp  DocPaths.h  FileWatcher.cpp  FileWatcher.h  FileWatcherManager.cpp  FileWatcherManager.h  Interface.cpp  Interface.h  InvertedIndex.cpp  InvertedIndex.h  MultiWatcher.cpp  MultiWatcher.h  OEMtoCase.cpp  OEMtoCase.h  Resolution.h  SearchServer.cpp  SearchServer.h  SerializationHelpers.h  SqlLogger.cpp  SqlLogger.h  TreadPool.h  some_func.h
src/AsioServer/: AsioServer.cpp  AsioServer.h
src/Commands/: Command.h  CommandContext.cpp  CommandContext.h  PersonalRequest.cpp  PersonalRequest.h
src/Commands/GetAttachments/: GetAttachmentsCmd.cpp  GetAttachmentsCmd.h  PrefixMap.cpp  PrefixMap.h
src/Commands/GetFile/: GetFileCmd.cpp  GetFileCmd.h
src/Commands/GetIshTelegaPdtv/: GetIshTelegaPdtvCommand.cpp  GetIshTelegaPdtvCommand.h
src/Commands/GetJsonTelega/: GetJsonTelegaCmd.cpp  GetJsonTelegaCmd.h  Telega.cpp  Telega.h
src/Commands/GetTelegaAttachments/: GetTelegaAttachments.cpp  GetTelegaAttachments.h
src/Commands/GetTelegaSingleAttachment/: GetTelegaSingleAttachmentCmd.cpp  GetTelegaSingleAttachmentCmd.h
src/Commands/GetTelegaWay/: GetTelegaWayCmd.cpp  GetTelegaWayCmd.h  TelegaWay.cpp  TelegaWay.h
src/Commands/SaveFile/: FileData.cpp  FileData.h  SaveDefaultCmd.cpp  SaveDefaultCmd.h  SaveFileCmd.cpp  SaveFileCmd.h  SaveTlgToSend.cpp  SaveTlgToSend.h
src/Commands/SaveMessage/: GetMessageCmd.cpp  GetMessageCmd.h  Message.cpp  Message.h  MessageQueue.cpp  MessageQueue.h  SaveMessageCmd.cpp  SaveMessageCmd.h
src/Commands/SearchServer/: SearchServerCmd.cpp  SearchServerCmd.h
src/Commands/ServiceCommands/: PingCmd.cpp  PingCmd.h
src/Commands/UserRegistry/: RegisterUserCmd.cpp  RegisterUserCmd.h  UserRegistry.cpp  UserRegistry.h
src/ContextRuntime/: ContextRuntime.cpp  ContextRuntime.h
src/FileWatcher/: FileEventDispatcher.cpp  FileEventDispatcher.h  FileWatcher.cpp  FileWatcher.h  MultiWatcher.cpp  MultiWatcher.h
src/FileWatcher/Commands/: IFileEventCommand.h  IndexCommands.cpp  IndexCommands.h  UpdateOpisBaseCommand.cpp  UpdateOpisBaseCommand.h  ZagKpodiChenger.cpp  ZagKpodiChenger.h
src/FileWatcher/Commands/OpdateOpisBaseCommand/: NumberSets.cpp  NumberSets.h  PodrIgnore.cpp  PodrIgnore.h  RecordProcessor.cpp  RecordProcessor.h  utils_help.cpp  utils_help.h
src/Index/: DocPaths.h  InvertedIndex.cpp  InvertedIndex.h  OEMFastTokenizer.cpp  OEMFastTokenizer.h  OEMtoUpper.cpp  PostingList.h  SerializationHelpers.h  WordID.cpp  WordID.h
src/JSON/: ConverterJSON.cpp  ConverterJSON.h
src/MyStrings/: myConverter.h  myString.h  myWstring.cpp  myWstring.h
src/MyUtils/: Encoding.cpp  Encoding.h  FileScanner.cpp  FileScanner.h  LogFile.cpp  LogFile.h  OEMCase.cpp  OEMCase.h  SqlLogger.cpp  SqlLogger.h  StartLog.cpp  StartLog.h  UtfUtil.h
src/SQLite/: SQLiteConnectionManager.cpp  SQLiteConnectionManager.h  mySQLite.cpp  mySQLite.h  mySql.cpp  mySql.h  sqlite3.h
src/SearchServer/: SearchServer.cpp  SearchServer.h
src/Utils/: portable_binary_iarchive.cpp  portable_binary_oarchive.cpp
src/Utils/utf8cpp/: utf8.h
src/md5/: md5Hasher.cpp  md5Hasher.h
src/scheduler/: AbstractScheduledTask.cpp  AbstractScheduledTask.h  BackupTask.cpp  BackupTask.h  DelayEventTickTask.cpp  DelayEventTickTask.h  FlushPendingTask.cpp  FlushPendingTask.h  PeriodicIndexUpdateTask.cpp  PeriodicIndexUpdateTask.h  PeriodicTaskManager.cpp  PeriodicTaskManager.h  PeriodicUpdateTask.cpp  PeriodicUpdateTask.h  TaskID.h  UpdateIndexTask.cpp  UpdateIndexTask.h
test/: FileWatcherManager.cpp  FileWatcherManager.h  Resolution.cpp
test/MyStrings/: myConverter.h  myString.cpp
test/index_atomic_lock_free/: InvertedIndex.cpp  OEMtoUpper.cpp  OEMtoUpper.h  PostingList.cpp  WordID.h  simd_tokenizer.h
utf8proc/: 10005.ATL
utf8proc-2.10.0/utf8proc-2.10.0/build_x86/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  utf8proc.sln  utf8proc.vcxproj  utf8proc.vcxproj.filters
utf8proc-2.10.0/utf8proc-2.10.0/build_x86/Win32/Release/ALL_BUILD/: ALL_BUILD.recipe
utf8proc-2.10.0/utf8proc-2.10.0/build_x86/Win32/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
utf8proc-2.10.0/utf8proc-2.10.0/build_x86/Win32/Release/ZERO_CHECK/: ZERO_CHECK.recipe
utf8proc-2.10.0/utf8proc-2.10.0/build_x86/Win32/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
utf8proc-2.10.0/utf8proc-2.10.0/build_x86/utf8proc.dir/Release/utf8proc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
